<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#81F7F3"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/Correo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#D8D8D8"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#D8D8D8"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#D8D8D8"
            android:hint="@string/Nombre"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/Fechatxt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#D8D8D8"
            android:hint="@string/Fechatxt"
            android:inputType="date"
            android:textAlignment="center" />

        <Button
            android:id="@+id/Aceptar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/Aceptar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>